// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography > matches snapshot for hero variant 1`] = `
<DocumentFragment>
  <h1
    class="typography hero medium"
  >
    Let’s play
  </h1>
</DocumentFragment>
`;

exports[`Typography > matches snapshot for link variant 1`] = `
<DocumentFragment>
  <a
    class="typography link full"
    href="/profile"
  >
    Profile
  </a>
</DocumentFragment>
`;

exports[`Typography > matches snapshot for title variant 1`] = `
<DocumentFragment>
  <h1
    class="typography title small"
  >
    Leaderboard
  </h1>
</DocumentFragment>
`;
